# hireLn-mcp

./: .env  main.py  pyproject.toml  run_servers.sh
clients/: agent_client.py  db_client.py  excelsheet_client.py  gdrive_client.py
llm/: langchain_wrapper.py  llm_client.py
mcp_server/: app.db  database.py  db_server.py  email_server.py  email_service.py  excelsheet_server.py  gdrive_server.py  host_server.py  sql_database.py
